# models-explorer

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/modelx-benchmarks/: Cargo.toml
crates/modelx-benchmarks/src/: cache.rs  db.rs  error.rs  lib.rs  matcher.rs  metric.rs  provider.rs
crates/modelx-benchmarks/tests/: db.rs  network.rs
crates/modelx-benchmarks/tests/fixtures/: bigcodebench.json  lmarena_coding.json  open_asr.json
crates/modelx-cache/: Cargo.toml
crates/modelx-cache/src/: lib.rs
crates/modelx-cli/: Cargo.toml
crates/modelx-cli/src/: main.rs
crates/modelx-core/: Cargo.toml
crates/modelx-core/src/: error.rs  field.rs  filter.rs  lib.rs  model.rs  query.rs  testkit.rs
crates/modelx-datasource/: Cargo.toml
crates/modelx-datasource/src/: lib.rs  registry.rs  source.rs
crates/modelx-datasource/src/modelsdev/: map.rs  mod.rs  parse.rs  schema.rs  source.rs
crates/modelx-datasource/tests/: parse_catalog.rs
crates/modelx-datasource/tests/fixtures/: api-sample.json
crates/modelx-export/: Cargo.toml
crates/modelx-export/src/: lib.rs
crates/modelx-tui/: Cargo.toml
crates/modelx-tui/examples/: screenshots.rs
crates/modelx-tui/src/: compare.rs  event.rs  lib.rs  run.rs  state.rs  theme.rs  ui.rs
docs/: _config.yml  architecture.md  benchmarks.md  data-sources.md  guide.md  index.md  usage.md
