[package]
name = "modelx-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Benchmark enrichment (LMArena Elo, BigCodeBench, Open ASR) for modelx"

[dependencies]
directories = "6.0.0"
modelx-core = { path = "../modelx-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.3"
ureq = "3.3.0"

[dev-dependencies]
tempfile = "3.27.0"
