[package]
name = "modelx-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "On-disk catalog cache for modelx"

[dependencies]
directories = "6.0.0"
modelx-core = { path = "../modelx-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
