[package]
name = "modelx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "modelx — a terminal UI for exploring LLM models and providers"

[[bin]]
name = "modelx"
path = "src/main.rs"

[dependencies]
modelx-core = { path = "../modelx-core" }
modelx-datasource = { path = "../modelx-datasource" }
modelx-cache = { path = "../modelx-cache" }
modelx-export = { path = "../modelx-export" }
modelx-tui = { path = "../modelx-tui" }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.2", features = ["derive"] }
directories = "6.0.0"
toml = "1.1.3"
anyhow = "1.0.103"
libc = "0.2.186"
clap_complete = "4.6.7"
csv = "1.4.0"
regex = "1.13.1"
serde_json = "1.0.150"
modelx-benchmarks = { path = "../modelx-benchmarks" }
tiny_http = "0.12.0"

[dev-dependencies]
tempfile = "3"
