[package]
name = "modelx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain model and query engine for modelx"

[dependencies]
nucleo-matcher = "0.3.1"
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
