[package]
name = "modelx-datasource"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Data-source abstraction and the models.dev source for modelx"

[dependencies]
modelx-core = { path = "../modelx-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ureq = "3.3.0"
