[package]
name = "modelx-export"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Selection exporter (JSON / CSV / Markdown / plain list) for modelx"

[dependencies]
csv = "1.4.0"
modelx-core = { path = "../modelx-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
